# spdx-venv-demo

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
